# videobox

./: .air.toml  .env.example  .gitignore  Cargo.toml  Dockerfile  Procfile  ProcfileGoreman  README.md  build.rs  go.mod  go.sum  main.go  package-lock.json  package.json  tailwind.config.ts
.cargo/: config  config.toml
api/config/: config.go
api/controllers/: course_controller.go  user_controller.go  video_controller.go
api/middleware/: jwt.go
api/routes/: routes.go
api/utils/: storage.go
backend/: channel_request.json  input_request.json  main.rs  schema.rs  test.txt
backend/config/: config.go
backend/controllers/: course_controller.go  user_controller.go  video_controller.go
backend/middleware/: jwt.go  mail.go
backend/models/: courses.go  mod.rs  share_video_request.go  user.go  video.go  video_share.go  view_params.go
backend/models/attachment_blobs/: generated.rs
backend/models/attachments/: generated.rs
backend/models/users/: generated.rs
backend/models/video_shares/: generated.rs
backend/models/videos/: generated.rs
backend/routes/: routes.go
backend/services/: attachment.rs  attachment_blob.rs  attachments.rs  connection.rs  database.rs  file.rs  mod.rs  storage.rs
backend/utils/: mux.go  storage.go  transcode.go
frontend/: next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
frontend/app/: global.css  layout.tsx  navbar.tsx  page.tsx
frontend/app/account/: page.tsx
frontend/app/activate/: page.tsx
frontend/app/files/: page.tsx
frontend/app/hooks/: useAuth.tsx  useQueryParam.ts
frontend/app/login/: page.tsx
frontend/app/myvideos/: page copy.tsx  page.tsx
frontend/app/oath/: page.tsx
frontend/app/recovery/: page.tsx
frontend/app/register/: page.tsx
frontend/app/reset/: page.tsx
frontend/app/types/: global.d.ts  plugin-storage.d.ts  react-dom.d.ts  rust.d.ts
frontend/app/upload/: page.tsx
frontend/app/view/[id]/: page.tsx
frontend/app/view/[token]/: page.tsx
frontend/components/: VideoComponent.tsx
frontend/src/: App.tsx
frontend/src/containers/: Files.tsx  Todo.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/types/: rust.d.ts
frontend/tests/: authentication.spec.ts
migrations/00000000000005_plugin_storage/: up.sql
migrations/2024-07-04-055537_video_shares/: down.sql  up.sql
