[[bin]]
name = "fullstack"
path = ".cargo/bin/fullstack.rs"

[[bin]]
name = "backend"
path = ".cargo/bin/backend.rs"

[[bin]]
name = "frontend"
path = ".cargo/bin/frontend.rs"

[[bin]]
name = "videobox"
path = "backend/main.rs"

[dependencies]
actix-files = "0.6.5"
actix-http = "3.6.0"
actix-multipart = "0.6.1"
actix-web = "4.5.1"
futures-util = "0.3.30"
create-rust-app = {git = "https://github.com/prsabahrami/create-rust-app.git", branch = "main", default-features = false, features=["plugin_auth", "plugin_auth-oidc", "plugin_container", "plugin_storage", "plugin_dev", "database_postgres", "backend_actix-web"]}
serde_json = "1.0.79"
jsonwebtoken = "=9.3.0"
simple_logger = "5.0.0"
log = { version = "0.4.18", features = [] }
actix-web-httpauth = "0.8.1"
ffmpeg-next = "7.0.2"
tempfile = "3.2"
uuid = "1.3.0"
reqwest = { version = "0.12.7", features = ["json"] }

[dependencies.chrono]
features = ["serde"]
version = "0.4.38"

[dependencies.diesel]
default-features = false
features = ["postgres", "r2d2", "chrono"]
version = "=2.1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.201"

[dependencies.tokio]
features = ["full"]
version = "1.37.0"

[package]
default-run = "videobox"
edition = "2021"
name = "videobox"
publish = false
version = "0.1.0"

[profile.dev]
debug-assertions = true
